--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@ coverage
 pkg
 doc
 .yardoc
+
+## BUNDLER
+bin/*
+vendor/gems/environment.rb
+vendor/gems/ruby/1.8/*
+!vendor/gems/ruby/1.8/cache/
+vendor/gems/ruby/1.9.1/*
+!vendor/gems/ruby/1.9.1/cache/
+config/build_options.yml
